# Helper

./: .gitignore  CMakeLists.txt
cmake/: color_transform.cmake
example/: CMakeLists.txt
example/singles/: color_transform.cpp  macro_util.cpp
include/Helper/: project.h
include/Helper/OpenGL/: GLObjects.h  GLUtils.h
include/Helper/cache/: file_cache.h
include/Helper/color_transform/: color_standard.h  color_transform.h
include/Helper/color_transform/internal/: matrix.h
include/Helper/d_type/: _d_type.h  d_type-.h  d_type.h
include/Helper/gtest/: gtest_main_proxy.h
include/Helper/log/: GL_enum.h  cuda_enum.h  log.h  log_formater.h  raw_GLenum.h
include/Helper/macro_util/: macro_util.h
include/Helper/project/: symbol.h
src/: project.h.in
src/OpenGL/: GLObjects.cpp
src/d_type/: d_type.cpp
src/log/: log.cpp
test/: CMakeLists.txt
test/singles/: color_transform.cpp  d_type.cpp  d_type_hellow_world.cpp
